@startuml
title AgentTurnService - Suggested Application Layer Refactor

left to right direction
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty members

package "Application Layer" {
  class AgentTurnService {
    + RunTurnAsync(...) : Task
  }

  package "Turn Lifecycle" {
    class AgentRunLifecycle {
      + BeginAsync(...) : AgentRunScope
      + CompleteAsync(...) : Task
      + FailAsync(...) : Task
    }

    class TurnEventPublisher {
      + PublishTurnStartedAsync(...) : Task
      + PublishLlmCompletedAsync(...) : Task
      + PublishToolCompletedAsync(...) : Task
      + PublishTurnCompletedAsync(...) : Task
      + PublishErrorAsync(...) : Task
    }
  }

  package "Conversation" {
    class TurnContextBuilder {
      + BuildAsync(...) : TurnContext
    }
  }

  package "Tools" {
    class ToolExecutionLoop {
      + CreateSessionAsync(...) : ToolExecutionSession
      + ExecuteAsync(...) : ToolLoopResult
    }

    class ToolExecutionSession {
      + Registry : ToolRegistry
      + LoopDetector : LoopDetector
    }

    class LoopDetector {
      + Record(...) : LoopDetectionResult
    }
  }

  package "Billing" {
    class BillingCheckpoint {
      + CheckBeforeLlmCallAsync(...) : Task
      + RecordAfterLlmCallAsync(...) : Task
    }
  }

  package "LLM" {
    class LlmTurnExecutor {
      + ExecuteAsync(...) : LlmTurnResult
    }

    class LlmRequestBuilder {
      + Build(...) : JsonElement
    }

    class SseResponseParser {
      + ParseAsync(...) : SseResult
    }

    class UsageResolver {
      + Resolve(...) : ResolvedLlmUsage
    }
  }

  class ApplicationEvents <<event stream>> {
    + turn lifecycle
    + pod connection
    + LLM completion and usage
    + assistant messages
    + tool calls and results
    + errors
  }
}

AgentTurnService --> AgentRunLifecycle : owns run state
AgentTurnService --> TurnEventPublisher : emits facts
AgentTurnService --> TurnContextBuilder : builds context
AgentTurnService --> BillingCheckpoint : enforces usage policy
AgentTurnService --> LlmTurnExecutor : executes model turn
AgentTurnService --> ToolExecutionLoop : executes tool calls
AgentTurnService ..> ApplicationEvents : publishes

LlmTurnExecutor --> LlmRequestBuilder : builds request
LlmTurnExecutor --> SseResponseParser : parses stream
LlmTurnExecutor --> UsageResolver : normalizes usage

ToolExecutionLoop --> LoopDetector : detects repeated output
ToolExecutionLoop --> ToolExecutionSession : owns per-turn state
ToolExecutionSession --> LoopDetector : keeps state
TurnEventPublisher ..> ApplicationEvents : publishes
BillingCheckpoint ..> ApplicationEvents : publishes failures

note right of ApplicationEvents
Events are grouped as an output stream here.
The concrete event records live in Domain/Events,
but they are not expanded in this application view.
end note

note bottom of AgentTurnService
The service becomes orchestration only.
Stateful or risky logic moves into focused collaborators
that can be tested independently.
end note

@enduml
